--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -7,6 +7,7 @@
     <button type="submit" class="btn btn-primary">Entrar</button>
 </form>
 <a class="nav-link" href="http://localhost:8080/register">Registrarse</a>
+<a href="/api/sessions/github">Entrar con Github</a>
 
 <div id="products-container" class="d-flex"></div>
 <script src="/js/login.js"></script>
